--- a/frontend/src/assets/styles/cmps/_main-menu.scss
+++ b/frontend/src/assets/styles/cmps/_main-menu.scss
@@ -17,8 +17,9 @@
     align-items: center;
     justify-content: space-between;
     border-radius: 2rem;
-    padding-right: 5px;
-    padding-left: 12px;
+    padding: 4px 0;
+    padding-right: 4px;
+    padding-left: 11px;
     border: 1px solid #dddddd;
     transition: box-shadow 0.2s;
     margin: 0;
